saint-lascivious.github.io: fix dns profile download links (maybe)
add github readme with link
move downloads to root
formatting magic
(font fonts fonts)

Changes to be committed:
 - new file:   .github/README.md
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutsainternet.html
 - modified:   connecttosainternet.html
 - renamed:    resources/downloads/apple/sainternet-https-and-tls.mobileconfig -> downloads/apple/sainternet-https-and-tls.mobileconfig
 - renamed:    resources/downloads/apple/sainternet-https-only.mobileconfig -> downloads/apple/sainternet-https-only.mobileconfig
 - renamed:    resources/downloads/apple/sainternet-tls-only.mobileconfig -> downloads/apple/sainternet-tls-only.mobileconfig
 - modified:   filtereddns.html
 - modified:   index.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   testsainternet.html

--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>sainternet.xyz</title>
+    <title>sainternet.xyz Connect to Sainternet</title>
 
     <!-- Manifest -->
     <link rel="manifest" href="resources/manifests/sainternet.webmanifest">
@@ -78,10 +78,10 @@
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Filtered DNS</a>
-          <a class="mdl-navigation__link" href="#connecttosainternet"> - <b>Connect to Sainternet</b></a>
-          <a class="mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
-          <a class="mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
+          <a class="mdl-navigation__link" href="aboutsainternet.html"> <icon class="fa-solid fa-arrow-right-long"></icon> About Filtered DNS</a>
+          <a class="mdl-navigation__link" href="#connecttosainternet"> <icon class="fa-solid fa-arrow-right-long"></icon> <b>Connect to Sainternet</b></a>
+          <a class="mdl-navigation__link" href="portsandprotocols.html"> <icon class="fa-solid fa-arrow-right-long"></icon> Ports and Protocols</a>
+          <a class="mdl-navigation__link" href="testsainternet.html"> <icon class="fa-solid fa-arrow-right-long"></icon> Test Sainternet</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
@@ -118,7 +118,7 @@
                 Android 9 (Pie) or higher required.
               </p>
               <p>
-                Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-regular fa-right-long"></icon> Search <icon class="fa-solid fa-magnifying-glass"></icon>, <icon class="fa-regular fa-right-long"></icon> Search for "Private DNS", <icon class="fa-regular fa-right-long"></icon> Select "Private DNS", <icon class="fa-regular fa-right-long"></icon> Select "Designated Private DNS", <icon class="fa-regular fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-regular fa-right-long"></icon> Done.
+                Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Search <icon class="fa-solid fa-magnifying-glass"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Search for "Private DNS", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Private DNS", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Designated Private DNS", <icon class="fa-solid fa-arrow-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-solid fa-arrow-right-long"></icon> Done.
               </p>
            </div>
         </div>
@@ -133,13 +133,13 @@
                 Select and download one of the following Sainternet Filtered DNS Profiles depending on your wants or requirements and open the downloaded file. You may be prompted one or more times, select to accept. These profiles are not digitally signed and that is expected/normal.
               </p>
               <p>
-                Sainternet DNS over HTTPS:<br> - <icon class="fa-regular fa-download"></icon> <a href="resources/downloads/apple/sainternet-https-only.mobileconfig">sainternet-https-only.mobileconfig<a/>
+                Sainternet DNS over HTTPS:<br> <icon class="fa-solid fa-dash"> </icon><icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig">sainternet-https-only.mobileconfig</a>
               </p>
               <p>
-                Sainternet DNS over TLS:<br> - <icon class="fa-regular fa-download"></icon> <a href="resources/downloads/apple/sainternet-tls-only.mobileconfig">sainternet-tls-only.mobileconfig<a/>
+                Sainternet DNS over TLS:<br> <icon class="fa-solid fa-arrow-right-long"></icon> <icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig">sainternet-tls-only.mobileconfig</a>
               </p>
               <p>
-                Sainternet DNS over HTTPS and TLS:<br> - <icon class="fa-regular fa-download"></icon> <a href="resources/downloads/apple/sainternet-https-and-tls.mobileconfig">sainternet-https-and-tls.mobileconfig<a/>
+                Sainternet DNS over HTTPS and TLS:<br> <icon class="fa-solid fa-arrow-right-long"></icon> <icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig">sainternet-https-and-tls.mobileconfig</a>
               </p>
               <p>
                 Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.
@@ -151,7 +151,7 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="googlechromechromium"><icon class="fa-brands fa-chrome"></icon> Google Chrome/Chromium</h3>
               <p>
-                Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon>, <icon class="fa-regular fa-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-regular fa-right-long"></icon> Select "Privacy and security", <icon class="fa-regular fa-right-long"></icon> Select "Use secure DNS", <icon class="fa-regular fa-right-long"></icon> Select "Choose another provider", <icon class="fa-regular fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-regular fa-right-long"></icon> Done.
+                Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Select "Privacy and security", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Use secure DNS", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Choose another provider", <icon class="fa-solid fa-arrow-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-solid fa-arrow-right-long"></icon> Done.
               </p>
            </div>
         </div>
@@ -160,7 +160,7 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> Mozilla Firefox</h3>
               <p>
-                Menu <icon class="fa-solid fa-bars"></icon>, <icon class="fa-regular fa-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-regular fa-right-long"></icon> Select "General", <icon class="fa-regular fa-right-long"></icon> Select "Network Settings", <icon class="fa-regular fa-right-long"></icon> Select "Settings", <icon class="fa-regular fa-right-long"></icon> Select "Enable DNS over HTTPS", <icon class="fa-regular fa-right-long"></icon> Select "Use Provider", <icon class="fa-regular fa-right-long"></icon> Select "Custom", <icon class="fa-regular fa-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-regular fa-right-long"></icon> Select "OK", <icon class="fa-regular fa-right-long"></icon> Done.
+                Menu <icon class="fa-solid fa-bars"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Select "General", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Network Settings", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Settings", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Enable DNS over HTTPS", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Use Provider", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Custom", <icon class="fa-solid fa-arrow-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-solid fa-arrow-right-long"></icon> Select "OK", <icon class="fa-solid fa-arrow-right-long"></icon> Done.
               </p>
               <p>
                 Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet (ignored if manually configured).
@@ -172,7 +172,7 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="samsunginternet">Samsung Internet</h3>
               <p>
-                See instructions for <a href="#googlechrome">Google Chrome/Chromium</a>.
+                See instructions for <a href="#googlechromechromium">Google Chrome/Chromium</a>.
               </p>
            </div>
         </div>
