--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>sainternet.xyz</title>
+    <title>sainternet.xyz Home</title>
 
     <!-- Manifest -->
     <link rel="manifest" href="resources/manifests/sainternet.webmanifest">
