--- a/portsandprotocols.html
+++ b/portsandprotocols.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>sainternet.xyz</title>
+    <title>sainternet.xyz Ports and Protocols</title>
 
     <!-- Manifest -->
     <link rel="manifest" href="resources/manifests/sainternet.webmanifest">
@@ -47,7 +47,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16.png">
 
     <!-- SEO -->
-    <link rel="canonical" href="https://sainternet.xyz/aboutsainternet.html">
+    <link rel="canonical" href="https://sainternet.xyz/portsandprotocols.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', luxio, Luxio, pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
 
     <!-- Styles -->
@@ -79,10 +79,10 @@
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Sainternet</a>
-          <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
-          <a class="mdl-navigation__link" href="#portsandprotocols"> - <b>Ports and Protocols</b></a>
-          <a class="mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
+          <a class="mdl-navigation__link" href="aboutsainternet.html"> <icon class="fa-solid fa-arrow-right-long"></icon> About Sainternet</a>
+          <a class="mdl-navigation__link" href="connecttosainternet.html"> <icon class="fa-solid fa-arrow-right-long"></icon> Connect to Sainternet</a>
+          <a class="mdl-navigation__link" href="#portsandprotocols"> <icon class="fa-solid fa-arrow-right-long"></icon> <b>Ports and Protocols</b></a>
+          <a class="mdl-navigation__link" href="testsainternet.html"> <icon class="fa-solid fa-arrow-right-long"></icon> Test Sainternet</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
