--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Pokémon #404</title>
+    <title>sainternet.xyz Pokémon #404</title>
 
     <!-- Manifest -->
     <link rel="manifest" href="resources/manifests/sainternet.webmanifest">
@@ -83,7 +83,7 @@
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">???</span>
-          <a class="mdl-navigation__link" href="#pokemon404"> - <b>???</b></a>
+          <a class="mdl-navigation__link" href="#pokemon404"> <icon class="fa-solid fa-arrow-right-long"></icon> <b>???</b></a>
         <nav class="mdl-navigation">
         </nav>
         <span class="mdl-layout-title">GitHub</span>
