--- a/testsainternet.html
+++ b/testsainternet.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>sainternet.xyz</title>
+    <title>sainternet.xyz Test Sainternet</title>
 
     <!-- Manifest -->
     <link rel="manifest" href="resources/manifests/sainternet.webmanifest">
@@ -79,9 +79,10 @@
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Sainternet</a>
-          <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
-          <a class="mdl-navigation__link" href="#testsainternet"> - <b>Test Sainternet</b></a>
+          <a class="mdl-navigation__link" href="aboutsainternet.html"> <icon class="fa-solid fa-arrow-right-long"></icon> About Sainternet</a>
+          <a class="mdl-navigation__link" href="connecttosainternet.html"> <icon class="fa-solid fa-arrow-right-long"></icon> Connect to Sainternet</a>
+          <a class="mdl-navigation__link" href="portsandprotocols.html"> <icon class="fa-solid fa-arrow-right-long"></icon> Ports and Protocols</a>
+          <a class="mdl-navigation__link" href="#testsainternet"> <icon class="fa-solid fa-arrow-right-long"></icon> <b>Test Sainternet</b></a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
