saint-lascivious.github.io: fix dns profile list, navigation links
Changes to be committed:
 - modified:   connecttosainternet.html
 - modified:   index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <span class="mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link" href="index.html"><b>Home</b></a>
+            <a class="mdl-navigation__link" href="#welcome"><b>Home</b></a>
             <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           </nav>
