--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -60,7 +60,6 @@
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
   </head>
   <body>
-    <script src="resources/javascript/sainternet.js"></script>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
@@ -133,13 +132,13 @@
                 Select and download one of the following Sainternet Filtered DNS Profiles depending on your wants or requirements and open the downloaded file. You may be prompted one or more times, select to accept. These profiles are not digitally signed and that is expected/normal.
               </p>
               <p>
-                Sainternet DNS over HTTPS:<br> <icon class="fa-solid fa-dash"> </icon><icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig">sainternet-https-only.mobileconfig</a>
+                Sainternet DNS over HTTPS:<br><icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig">sainternet-https-only.mobileconfig</a>
               </p>
               <p>
-                Sainternet DNS over TLS:<br> <icon class="fa-solid fa-arrow-right-long"></icon> <icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig">sainternet-tls-only.mobileconfig</a>
+                Sainternet DNS over TLS:<br><icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig">sainternet-tls-only.mobileconfig</a>
               </p>
               <p>
-                Sainternet DNS over HTTPS and TLS:<br> <icon class="fa-solid fa-arrow-right-long"></icon> <icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig">sainternet-https-and-tls.mobileconfig</a>
+                Sainternet DNS over HTTPS and TLS:<br><icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig">sainternet-https-and-tls.mobileconfig</a>
               </p>
               <p>
                 Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.
