saint-lascivious.github.io: news and updates
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutsainternet.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - new file:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   testsainternet.html

--- a/404.html
+++ b/404.html
@@ -62,7 +62,6 @@
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
   </head>
   <body>
-    <script src="resources/javascript/sainternet.js"></script>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
@@ -70,6 +69,7 @@
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="index.html">Home</a>
+            <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           </nav>
@@ -79,6 +79,7 @@
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
+          <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
