--- a/265.html
+++ b/265.html
@@ -69,6 +69,7 @@
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="index.html">Home</a>
+            <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           </nav>
@@ -78,6 +79,7 @@
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="index.html">Home</a>
+          <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
